poke/testsuite/poke.pkl/field-init-diag-4.pk
/* { dg-do compile } */

deftype Foo = struct { int = 3; } /* { dg-error ".*anonymous.*" } */
